--- a/NoFood.Api/package.json
+++ b/NoFood.Api/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "md5": "^2.2.1",
     "mongoose": "^5.2.13"
   }
